Issue 3693: console.table truncates strings
http://code.google.com/p/fbug/source/detail?r=8534

--- a/extension/skin/classic/table.css
+++ b/extension/skin/classic/table.css
@@ -45,6 +45,12 @@
     padding: 1px 4px 0 4px;
 }
 
+/* The last column needs more horizontal space since part of it is overlapped by
+   the vertical scroll bar */
+.dataTable td:last-child {
+    padding-right: 20px;
+}
+
 .useA11y .dataTable *:focus {
     outline-offset: -2px;
 }
